istio-ingressgateway-new.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: istio-ingressgateway 
    chart: gateways-1.0.6 
    heritage: Tiller 
    istio: ingressgateway
    k8s-app: istio 
    # kubernetes.io/cluster-service: "true" 
    # release: istio 
  name: istio-ingressgateway-new
  namespace: istio-system
spec:
  externalTrafficPolicy: Cluster
  loadBalancerIP: 35.232.64.20  ## Should have the reserved Regional-IP created by terraform. 
  ports:
  - name: http2
    port: 80
    protocol: TCP
    targetPort: 80
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  - name: tcp
    port: 31400
    protocol: TCP
    targetPort: 31400
  - name: tcp-pilot-grpc-tls
    port: 15011
    protocol: TCP
    targetPort: 15011
  - name: tcp-citadel-grpc-tls
    port: 8060
    protocol: TCP
    targetPort: 8060
  - name: tcp-dns-tls
    port: 853
    protocol: TCP
    targetPort: 853
  - name: http2-prometheus
    port: 15030
    protocol: TCP
    targetPort: 15030
  - name: http2-grafana
    port: 15031
    protocol: TCP
    targetPort: 15031
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  sessionAffinity: None
  type: LoadBalancer
