bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # how to decide for our version of istio-gateway(NLB)
  servers:
  - hosts:
    - 35.232.64.20
    port:
      name: http
      number: 80
      protocol: HTTP
